[gd_scene load_steps=22 format=2]

[ext_resource path="res://Gfx/Model/AR.glb" type="PackedScene" id=1]
[ext_resource path="res://Scn/Actor/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Scn/Fx/Sound/Sfx.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://addons/LineRenderer/Line.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sfx/Slap.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleMesh" id=1]
radial_segments = 16

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.168627, 0.54902, 1, 1 )

[sub_resource type="CapsuleShape" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
flags_vertex_lighting = true
albedo_color = Color( 0.866667, 0.580392, 0.188235, 1 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
flags_vertex_lighting = true
albedo_color = Color( 0.4, 0.176471, 0.741176, 1 )

[sub_resource type="Animation" id=6]
resource_name = "Fire"
length = 0.125
step = 0.005
tracks/0/type = "bezier"
tracks/0/path = NodePath("CamX/CamY/Gun:translation:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -0.75, -0.25, 0, 0.0125, 0, -0.5, -0.0125, 0, 0.05, 0, -0.75, -0.05, 0, 0.0293829, -0.013368 ),
"times": PoolRealArray( 0, 0.025, 0.125 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CamX/CamY/Gun:rotation_degrees:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.015, 0, 1, -0.015, 0, 0.0475, 0, 0, -0.0475, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.03, 0.125 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CamX/CamY/Gun:rotation_degrees:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.015, 0, 0, -0.015, 0, 0.0475, 0, 0, -0.0475, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.03, 0.125 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CamX/CamY/Gun:rotation_degrees:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.015, 0, 0, -0.015, 0, 0.0475, 0, 0, -0.0475, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.03, 0.125 )
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
length = 2.0
loop = true
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("CamX/CamY:translation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.5, 0, -0.01, -0.5, 0, 0.5, 0, 0, -0.5, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CamX/CamY/Gun:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.5, 0, -0.01, -0.5, 0, 0.5, 0, 0, -0.5, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("CamX/CamY/CamHolder:translation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.0729712, -0.000123404, 0.075, 0, -0.03, -0.075, 0, 0.075, 0, 0, -0.075, 0, 0.075, 0, -0.03, -0.075, 0, 0.075, 0, 0, -0.075, 0, 0.05, 0 ),
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CamX/CamY/CamHolder:translation:z")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.075, 0, 0, -0.075, 0, 0.075, 0, 0, -0.075, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.15, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CamX/CamY/CamHolder:rotation_degrees:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.075, 0, 0, -0.075, 0, 0.075, 0, 0, -0.075, 0, 0.075, 0, 0, -0.075, 0, 0.075, 0, 0, -0.075, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CamX/CamY/CamHolder:rotation_degrees:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.075, 0, 0, -0.075, 0, 0.075, 0, 0, -0.075, 0, 0.075, 0, 0, -0.075, 0, 0.075, 0, 0, -0.075, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("CamX/CamY/CamHolder:rotation_degrees:z")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.05, 0, 0.075, 0, 0.2, -0.075, 0, 0.075, 0, 0, -0.075, 0, 0.075, 0, -0.2, -0.075, 0, 0.075, 0, 0, -0.075, 0, 0.05, 0 ),
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 )
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Fire"

[sub_resource type="AnimationNodeOneShot" id=10]
filter_enabled = true
filters = [ "CamX/CamY/CamHolder:rotation_degrees:x", "CamX/CamY/CamHolder:rotation_degrees:y", "CamX/CamY/CamHolder:rotation_degrees:z", "CamX/CamY/CamHolder:translation:y", "CamX/CamY/CamHolder:translation:z", "CamX/CamY/Gun:rotation_degrees:x", "CamX/CamY/Gun:rotation_degrees:y", "CamX/CamY/Gun:rotation_degrees:z", "CamX/CamY/Gun:translation:y", "CamX/CamY/Gun:translation:z", "CamX/CamY:translation:y" ]

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Idle"

[sub_resource type="AnimationNodeBlend2" id=12]
filter_enabled = true
filters = [ "CamX/CamY/CamHolder:rotation_degrees:x", "CamX/CamY/CamHolder:rotation_degrees:y", "CamX/CamY/CamHolder:rotation_degrees:z", "CamX/CamY/CamHolder:translation:y", "CamX/CamY/CamHolder:translation:z", "CamX/CamY/Gun:rotation_degrees:x", "CamX/CamY/Gun:rotation_degrees:y", "CamX/CamY/Gun:rotation_degrees:z", "CamX/CamY/Gun:translation:y", "CamX/CamY/Gun:translation:z", "CamX/CamY:translation:y" ]

[sub_resource type="AnimationNodeTimeScale" id=13]

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "WalkCam"

[sub_resource type="AnimationNodeBlendTree" id=15]
graph_offset = Vector2( -73, 19 )
nodes/Animation/node = SubResource( 9 )
nodes/Animation/position = Vector2( 300, 280 )
nodes/Firing/node = SubResource( 10 )
nodes/Firing/position = Vector2( 600, 160 )
nodes/Idle/node = SubResource( 11 )
nodes/Idle/position = Vector2( -40, 200 )
nodes/Move/node = SubResource( 12 )
nodes/Move/position = Vector2( 280, 120 )
nodes/SprintFactor/node = SubResource( 13 )
nodes/SprintFactor/position = Vector2( 100, 300 )
nodes/Walk/node = SubResource( 14 )
nodes/Walk/position = Vector2( -80, 400 )
nodes/output/position = Vector2( 1060, 240 )
node_connections = [ "output", 0, "Firing", "Firing", 0, "Move", "Firing", 1, "Animation", "Move", 0, "Idle", "Move", 1, "SprintFactor", "SprintFactor", 0, "Walk" ]

[node name="Player" type="KinematicBody"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )
cam_path = "res://Scn/Actor/ShakyCam.tscn"
flippers_path = "res://Scn/Actor/Player/Flippers.tscn"

[node name="CamX" type="Spatial" parent="."]

[node name="CamY" type="Spatial" parent="CamX"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0081308, 0 )

[node name="Gun" parent="CamX/CamY" instance=ExtResource( 1 )]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0.75, -0.0081308, -0.75 )

[node name="Muzzle" type="Position3D" parent="CamX/CamY/Gun"]
transform = Transform( 1.33333, -7.39705e-16, -1.59872e-14, 2.14688e-15, 1.33333, 1.98952e-13, 1.59872e-14, -1.98952e-13, 1.33333, 0.000968695, 0.820632, -2.52995 )

[node name="FrontCast" type="RayCast" parent="CamX/CamY/Gun/Muzzle"]
transform = Transform( 1, 3.35002e-19, 0, 3.35002e-19, 1, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
exclude_parent = false
cast_to = Vector3( 0, 0, -400 )
collision_mask = 7

[node name="Sfx" parent="CamX/CamY/Gun/Muzzle" instance=ExtResource( 3 )]
max_db = 0.0
bus = "Sfx"

[node name="CamHolder" type="Spatial" parent="CamX/CamY"]

[node name="MeshHelp" type="Spatial" parent="CamX"]

[node name="PMesh" type="CSGMesh" parent="CamX/MeshHelp"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="GrappleSfx" type="AudioStreamPlayer3D" parent="CamX"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13213, 0 )
stream = ExtResource( 6 )
max_db = 0.0
bus = "Sfx"

[node name="Hitbox" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="ROF" type="Timer" parent="."]
process_mode = 0
wait_time = 0.15
one_shot = true

[node name="FlipTime" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="Sight" type="Control" parent="."]
margin_left = -33.234
margin_top = -34.6482
margin_right = 6.76599
margin_bottom = 5.35176
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Img" type="TextureRect" parent="Sight"]
margin_left = -33.0
margin_top = -33.0
margin_right = 31.0
margin_bottom = 31.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.02375, 2.02893, 3.61047 )
visible = false
material_override = SubResource( 4 )
drawCaps = false
drawCorners = false
scaleTexture = false

[node name="Line2" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.02375, 2.02893, 3.61047 )
visible = false
material_override = SubResource( 5 )
drawCaps = false
drawCorners = false
scaleTexture = false

[node name="Anim" type="AnimationPlayer" parent="."]
playback_process_mode = 0
method_call_mode = 1
anims/Fire = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/WalkCam = SubResource( 8 )

[node name="AnimTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../Anim")
active = true
process_mode = 0
parameters/Firing/active = false
parameters/Move/blend_amount = 0.0
parameters/SprintFactor/scale = 1.0
