[gd_scene load_steps=9 format=2]

[ext_resource path="res://Shader/flexible_toon.shader" type="Shader" id=1]
[ext_resource path="res://Scn/Actor/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Scn/Fx/Sound/Sfx.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Sfx/weapon/laser01.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleMesh" id=2]
radial_segments = 16

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 1 )
shader_param/albedo = Color( 0.360784, 0.627451, 1, 1 )
shader_param/clamp_diffuse_to_max = false
shader_param/cuts = 2
shader_param/wrap = 0.0
shader_param/steepness = 1.0
shader_param/use_attenuation = false
shader_param/use_specular = true
shader_param/specular_strength = 0.25
shader_param/specular_shininess = 8.0
shader_param/use_rim = false
shader_param/rim_width = 8.0
shader_param/rim_color = Color( 1, 1, 1, 1 )
shader_param/use_ramp = false

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.61101, 0 )
script = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="."]
transform = Transform( 0.999848, 0.0174524, -2.84336e-09, 0, -1.62921e-07, -1, -0.0174524, 0.999848, -1.62896e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material = SubResource( 3 )

[node name="Firetime" type="Timer" parent="."]
process_mode = 0
wait_time = 0.15
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="CamHelp" type="Spatial" parent="."]

[node name="Gun" type="CSGBox" parent="CamHelp"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.75, 0.35, -0.75 )
width = 0.2
height = 0.2

[node name="Sfx" type="AudioStreamPlayer" parent="CamHelp/Gun" instance=ExtResource( 3 )]
stream = ExtResource( 5 )
volume_db = -24.0
bus = "Sfx"

[node name="Muzzle" type="Position3D" parent="CamHelp/Gun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="OmniLight" type="OmniLight" parent="CamHelp/Gun/Muzzle"]
visible = false
shadow_enabled = true

[node name="RayCast" type="RayCast" parent="CamHelp/Gun/Muzzle"]
enabled = true
cast_to = Vector3( 0, 0, -400 )

[node name="Sync" type="Timer" parent="."]
process_mode = 0
wait_time = 4.0
autostart = true

[node name="Sight" type="Control" parent="."]
margin_left = -33.234
margin_top = -34.6482
margin_right = 6.76599
margin_bottom = 5.35176
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sight" type="TextureRect" parent="Sight"]
margin_left = -33.0
margin_top = -33.0
margin_right = 31.0
margin_bottom = 31.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnWall" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.937505 )
cast_to = Vector3( 0, 0, -0.5 )

[node name="Ledge" type="RayCast" parent="OnWall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
cast_to = Vector3( 0, 2, 0 )
[connection signal="timeout" from="Sync" to="." method="_on_Sync_timeout"]
